--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.1",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
